use YUP for validate user Register

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -17,7 +17,7 @@
                             <div class="absolute inset-y-0 right-0 flex items-center pr-3 pointer-events-none">
                                 <i data-feather="user" class="text-gray-500"></i>
                             </div>
-                            <input type="text" id="email" class="bg-gray-700 border border-gray-600 text-gray-100 text-sm rounded-lg focus:ring-primary focus:border-primary block w-full p-2.5 pr-10" placeholder="example@domain.com" required>
+                            <input dir="ltr" type="text" id="email" class="bg-gray-700 border border-gray-600 text-gray-100 text-sm rounded-lg focus:ring-primary focus:border-primary block w-full p-2.5 pr-10" placeholder="example@domain.com" required>
                         </div>
                     </div>
                     
@@ -27,7 +27,7 @@
                             <div class="absolute inset-y-0 right-0 flex items-center pr-3 pointer-events-none">
                                 <i data-feather="lock" class="text-gray-500"></i>
                             </div>
-                            <input type="password" id="password" class="bg-gray-700 border border-gray-600 text-gray-100 text-sm rounded-lg focus:ring-primary focus:border-primary block w-full p-2.5 pr-10" placeholder="••••••••" required>
+                            <input dir="ltr" type="password" id="password" class="bg-gray-700 border border-gray-600 text-gray-100 text-sm rounded-lg focus:ring-primary focus:border-primary block w-full p-2.5 pr-10" placeholder="••••••••" required>
                         </div>
                     </div>
                     
@@ -80,7 +80,7 @@
                 </div>
                 
                 <div class="text-sm font-medium text-gray-400 text-center">
-                    حساب کاربری ندارید؟ <a href="register.html" class="text-primary hover:underline">ثبت نام کنید</a>
+                    حساب کاربری ندارید؟ <a href="/register" class="text-primary hover:underline">ثبت نام کنید</a>
                 </div>
             </form>
         </div>
